# vault

./: .gitignore  README.md  now.json  targets.txt  temp.txt  todo.txt  vercel.json
.github/workflows/: api.yml  ci.yml  client.yml  graph.yml  targets.yml
api/: Cargo.toml  dep.txt  depmod.txt  install.sh  run.sh  temp.csv  temp.txt  test.sh  update.sh
api/config/: vault_api.conf
api/config/cron/: vault_api
api/config/systemd/: vault_api.service
api/derive/: Cargo.toml
api/derive/src/: lib.rs
api/src/: lib.rs  main.rs  utils.rs
api/src/arango/: client.rs  document.rs  mod.rs
api/src/ingest/: fs.rs  load.rs  mod.rs  schema.rs  traits.rs
api/src/routes/: categories.rs  compiler.rs  crates.rs  keywords.rs  mod.rs  reset.rs  state.rs  utils.rs
api/src/server/: categories.rs  crates.rs  graph.rs  keywords.rs  mod.rs  reset.rs  state.rs  util.rs
api/src/utils/: common.rs  mod.rs  ssl.rs  state.rs
api/tests/: bench_graph.rs  bench_random.rs  bench_search.rs  categories.rs  compiler.rs  crates.rs  keywords.rs  state.rs  tests.rs
api/tests/common/: mod.rs
api/traits/: Cargo.toml
api/traits/src/: lib.rs
client/: .eslintrc.json  .stylelintrc.json  LICENSE  font-preload-cache.json  gatsby-config.js  package-lock.json  package.json  tsconfig.json
client/public/: index.html  manifest.json
client/src/: App.tsx  index.tsx
client/src/components/: CratePanelBody.tsx  CratePanelListItem.tsx  ForceGraph.tsx  ForceGraphWrapper.tsx  Head.tsx  Sidebar.tsx  index.ts
client/src/pages/: index.tsx
client/src/styles/: antd.scss  vault.scss
client/src/utils/: api.ts  types.d.ts  types.ts
cra/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
cra/src/components/: CratePanelItem.tsx  CratePanelListItem.tsx  ForceGraphWrapper.tsx  Head.tsx
cra/src/styles/: antd.scss  vault.scss
db/: Cargo.toml
db/src/: lib.rs  main.rs
db/src/arango/: client.rs  document.rs
db/src/db/: document.rs
db/src/ingest/: fs.rs  load.rs  mod.rs
force-graph/: Cargo.toml
force-graph/src/: lib.rs  octree.rs
graph/: Cargo.toml  bench.sh  clippy.sh
graph/src/: fs.rs  lib.rs  load.rs  schema.rs  traits.rs
graph/tests/: bench_graph.rs  bench_random.rs  bench_search.rs
ingest/: Cargo.toml
ingest/src/: main.rs
ingest/src/arango/: client.rs  document.rs
targets/: Cargo.toml
targets/src/: lib.rs  main.rs
