[package]
authors = ["Arpan Laha <arpanlaha99@gmail.com>"]
edition = "2021"
name = "vault_api"
version = "0.1.0"
description = "Interactively visualize your crates.io dependencies."
license = "MIT"
repository = "https://github.com/arpanlaha/vault.git"

[dependencies]
ahash = "0.8"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }
vault_graph = { path = "../graph" }
warp = "0.3"

[dev-dependencies]
chrono = { version = "0.4" }
lazy_static = "1.4"
serde_json = "1.0"

[profile.release]
lto = "fat"
panic = "abort"
strip = "symbols"
codegen-units = 1

[profile.release.package.'*']
strip = "symbols"
opt-level = 3
codegen-units = 1

[profile.test]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
