[package]
authors = ["Arpan Laha <arpanlaha99@gmail.com>"]
edition = "2018"
name    = "vault_db"
version = "0.1.0"

[dependencies]
chrono        = { version = "0.4", features = ["serde"] }
csv           = "1.1"
curl          = "0.4"
dotenv        = "0.15"
flate2        = "1.0"
redis         = "0.16"
redisgraph    = "0.5"
semver-parser = "0.9"
serde         = "1.0"
tar           = "0.4"
tempfile      = "3.1"
tokio         = { version = "0.2", features = ["macros"] }
