[package]
name = "wasm-force-graph"
version = "0.1.0"
authors = ["Arpan Laha <arpanlaha99@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wee_alloc = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
