[package]
authors = ["Arpan Laha <arpanlaha99@gmail.com>"]
edition = "2018"
name = "vault_graph"
version = "0.1.0"
description = "Interactively visualize your crates.io dependencies."
license = "MIT"
repository = "https://github.com/arpanlaha/vault.git"

[dependencies]
cargo-platform = "0.1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
rand = "0.7"
semver-parser = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.10"
tempfile = "3.1"
tokio = { version = "0.2", features = ["macros"] }

[dev-dependencies]
futures = "0.3"
lazy_static = "1.4"
