[package]
authors = ["Arpan Laha <arpanlaha99@gmail.com>"]
edition = "2018"
name = "vault_graph"
version = "0.1.0"
description = "Interactively visualize your crates.io dependencies."
license = "MIT"
repository = "https://github.com/arpanlaha/vault.git"

[dependencies]
ahash = "0.6"
cargo-platform = "0.1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
rand = "0.8"
semver-parser = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.1"

[dev-dependencies]
lazy_static = "1.4"
